--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  }
+  },
+  "homepage": "https://KPSecretAccount.github.io/business_website/"
 }
